# vishwakarma-product

./: .gitignore  README.md  pyproject.toml
cell/: README.md  __init__.py  cli.py  demo.py  pipeline.py
cell/fusion/: decision.py
cell/intake/: models.py  service.py
cell/records/: build.py
cell/sensing/: nde_ingest.py  synthetic.py
docs/: architecture.md
evals/: README.md
evals/baselines/: README.md  models.py  run.py  trained.py
evals/datasets/: outreach.md  sources.md  synthetic.py
evals/datasets/ingest/: abonyilab_scan3d.py
evals/datasets/manifests/: abonyilab_scan3d.jsonl
evals/features/: scan3d_deviation.py
evals/schema/: record.schema.json  validate.py
evals/scoring/: economic_metric.py
evals/taxonomy/: acceptance.py  acceptance_rules.yaml  iso5817-acceptance.md
tests/: test_acceptance_taxonomy.py  test_cell_pipeline.py  test_eval_baselines.py  test_intake_persistence.py  test_nde_ingest.py  test_scan3d_deviation.py  test_scan3d_ingest.py  test_trained_baseline.py
