[project]
name = "vishwakarma-evals"
version = "0.0.1"
description = "Multimodal, economically-weighted quality-inspection benchmark (PAUT-first)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
baselines = [
    "torch>=2.2",
    "scikit-learn>=1.4",
]
hardware-ingest = [
    "h5py>=3.10",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
